--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "node": "www.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {},
